--- a/css/layouts/marketing.css
+++ b/css/layouts/marketing.css
@@ -142,7 +142,7 @@ a.pure-button-primary {
     overflow: hidden;
     /* The following styles are required for the "scroll-over" effect */
     width: 100%;
-    height: 88%;
+    height: 60%;
     top: 0;
     left: 0;
     position: fixed !important;
@@ -154,7 +154,7 @@ a.pure-button-primary {
     height: 50%;
     margin: auto;
     position: absolute;
-    top: 100px; left: 0; bottom: 0; right: 0;
+    top: 100px; left: 0; /*bottom: 0;*/ right: 0;
     text-align: center;
     text-transform: uppercase;
 }
@@ -185,7 +185,7 @@ a.pure-button-primary {
 .content-wrapper {
     /* These styles are required for the "scroll-over" effect */
     position: absolute;
-    top: 87%;
+    top: 60%;
     width: 100%;
     min-height: 12%;
     z-index: 2;
